--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,3 +44,16 @@ header a {
     width: 250px;
     height: auto;
 }
+
+input {
+    border: 1px solid #cccccc;
+    padding: .5em;
+}
+
+button {
+    cursor: pointer;
+    background: #888888;
+    border: #888888;
+    color: white;
+    padding: .5em;
+}
